[package]
name = "cryptopals_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = "0.10.75"

[[bin]]
name = "s1c3"
path = "src/challenges/s1c3.rs"
[[bin]]
name = "s1c4"
path = "src/challenges/s1c4.rs"
[[bin]]
name = "s1c6"
path = "src/challenges/s1c6.rs"
[[bin]]
name = "s1c7"
path = "src/challenges/s1c7.rs"
[[bin]]
name = "s1c8"
path = "src/challenges/s1c8.rs"
